[package]
name = "calculate-repo-late-days"
version = "1.0.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version="0.4.23", features = ["serde"]}
chrono-tz = "0.8.1"
gitlab = "0.1508.0"
serde = "1.0.152"
time = "0.3.17"

[dev-dependencies]
httpmock = "0.6"
log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.10.0"
